--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npm run eslint",
     "start": "node ./src/service/service.js",
+    "server": "nodemon ./src/service/cli/server.js --server",
     "eslint": "eslint --ext .js src/"
   },
   "repository": {
@@ -20,6 +21,10 @@
   "homepage": "https://github.com/dawinn/273215-buy-and-sell-3#readme",
   "devDependencies": {
     "eslint": "6.8.0",
-    "eslint-config-htmlacademy": "0.5.2"
+    "eslint-config-htmlacademy": "0.5.2",
+    "nodemon": "2.0.2"
+  },
+  "dependencies": {
+    "express": "4.17.1"
   }
 }
