--- a/package.json
+++ b/package.json
@@ -21,16 +21,23 @@
   },
   "homepage": "https://github.com/dawinn/273215-buy-and-sell-3#readme",
   "devDependencies": {
+    "debug": "4.1.1",
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
     "html2pug": "4.0.0",
+    "jest": "26.0.1",
     "nodemon": "2.0.2",
+    "pino-debug": "1.3.0",
+    "pino-pretty": "4.0.0",
     "pug-lint": "2.6.0",
     "request": "2.88.2"
   },
   "dependencies": {
     "express": "4.17.1",
     "express-formidable": "1.2.0",
+    "express-pino-logger": "5.0.0",
+    "nanoid": "3.1.6",
+    "pino": "^6.2.1",
     "pug": "2.0.4",
     "request-promise": "4.2.5"
   }
