--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Куплю. Продам",
   "main": "./src/service/service.js",
   "scripts": {
-    "test": "npm run eslint",
+    "test": "npm run test::rest",
+    "test::rest": "jest",
     "start": "node ./src/service/service.js",
+    "start::debug": "LOG_LEVEL=debug node ./src/service/service.js --server | ./node_modules/.bin/pino-pretty",
     "server": "nodemon ./src/service/service.js --server",
     "front-server": "nodemon ./src/express/index.js",
     "eslint": "eslint --ext .js src/"
@@ -30,7 +32,8 @@
     "pino-debug": "1.3.0",
     "pino-pretty": "4.0.0",
     "pug-lint": "2.6.0",
-    "request": "2.88.2"
+    "request": "2.88.2",
+    "supertest": "4.0.2"
   },
   "dependencies": {
     "express": "4.17.1",
@@ -38,6 +41,7 @@
     "express-pino-logger": "5.0.0",
     "nanoid": "3.1.6",
     "pino": "^6.2.1",
+    "pino-multi-stream": "^5.0.0",
     "pug": "2.0.4",
     "request-promise": "4.2.5"
   }
