--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "pino-debug": "1.3.0",
     "pino-pretty": "4.0.0",
     "pug-lint": "2.6.0",
-    "request": "2.88.2",
     "supertest": "4.0.2"
   },
   "dependencies": {
@@ -43,6 +42,8 @@
     "pino": "^6.2.1",
     "pino-multi-stream": "^5.0.0",
     "pug": "2.0.4",
-    "request-promise": "4.2.5"
+    "request": "2.88.2",
+    "request-promise": "4.2.5",
+    "request-promise-native": "1.0.8"
   }
 }
