--- a/package.json
+++ b/package.json
@@ -35,15 +35,18 @@
     "supertest": "4.0.2"
   },
   "dependencies": {
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-formidable": "1.2.0",
     "express-pino-logger": "5.0.0",
     "nanoid": "3.1.6",
+    "pg": "8.3.3",
     "pino": "^6.2.1",
     "pino-multi-stream": "^5.0.0",
     "pug": "2.0.4",
     "request": "2.88.2",
     "request-promise": "4.2.5",
-    "request-promise-native": "1.0.8"
+    "request-promise-native": "1.0.8",
+    "sequelize": "6.3.5"
   }
 }
