--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "supertest": "4.0.2"
   },
   "dependencies": {
+    "bcrypt": "5.0.1",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-formidable": "1.2.0",
