--- a/package.json
+++ b/package.json
@@ -36,11 +36,16 @@
   },
   "dependencies": {
     "bcrypt": "5.0.1",
+    "body-parser": "1.19.0",
+    "cookie-parser": "1.4.5",
+    "csurf": "1.11.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-formidable": "1.2.0",
     "express-pino-logger": "5.0.0",
+    "express-session": "1.17.1",
     "express-validator": "^6.9.2",
+    "helmet": "4.6.0",
     "joi": "17.3.0",
     "multer": "^1.4.2",
     "nanoid": "3.1.6",
